# music

./: .coveragerc  .gitignore  .python-version  LICENSE  Makefile  Music.spec  README.md  TODO.md  pyproject.toml  requirements-dev.txt
.github/workflows/: build-and-test.yaml
docs/: README.md
src/: find_cue_sheet_paths_test.py  music.py  music_test.py  options_test.py  run_app.py  write_report_test.py
src/cuesheet/: __init__.py  blank.py  cuesheet.py  cuesheet_test.py  error.py  field.py  file.py  index.py  index_test.py  parse.py  performer.py  performer_test.py  statement.py  title.py  title_test.py  track.py
src/cuesheet/commands/: __init__.py  command_type_map.py  file.py  index_test.py  parse.py  performer.py  rem.py  title.py  track.py  track_test.py
src/cuesheet/fields/: __init__.py  field.py  file.py  file_test.py  index.py  parse.py  performer.py  split.py  title.py  title_test.py  track.py  type_map.py
src/cuesheet/lines/: __init__.py
src/cuesheet/test_data/: cue_sheet1.txt
src/music/: __main__.py  find_cue_sheet_paths.py  find_cue_sheet_paths_test.py  options.py  options_test.py  write_report.py  write_report_test.py
src/music/app/: album.py  album_list.py  albums_list.py  app.py  artist.py  artist_list.py  artists_list.py  library.py  main_window.py  model_list.py  track_list.py  tracks_list.py
src/music/cue_sheet/: __init__.py  builder.py  cue_sheet.py  cue_sheet_test.py  error.py  file.py  track.py
src/music/cuesheet/: __init__.py  builder.py  cuesheet.py  cuesheet_test.py  index_point.py  index_point_test.py  lexer.py  lexer_test.py
(+105 files in other folders)
