[project]
name = 'music'
version = '0.0.1'
requires-python = '==3.13.*'
dependencies = [
    'PySide6 ==6.9.1',
]


[tool.ruff]
line-length = 80


[tool.ruff.format]
quote-style = 'single'


[tool.uv]
dev-dependencies = [
    'mypy ==1.17.0',
    'PySide6-stubs ==6.7.3.0',
    'pytest ==8.4.1',
    'pytest-cov ==6.2.1',
]
